about page title alignment fixed

--- a/src/styles/nav/nav.scss
+++ b/src/styles/nav/nav.scss
@@ -113,6 +113,7 @@
     font-size: 40px;
     margin-bottom: 70px;
     margin-top: 150px;
+    text-align: center;
 }
 
 .about-info {
